# TinyRecursiveModels

./: pretrain.py  pyproject.toml  requirements.txt
config/: cfg_pretrain_arc1.yaml  cfg_pretrain_maze.yaml  cfg_pretrain_text.yaml  cfg_pretrain_text_scale.yaml
config/arch/: trm.yaml  trm_hier6.yaml  trm_singlez.yaml  trm_text.yaml  trm_text_scale.yaml
dataset/: build_text_dataset.py
models/: layers.py  losses.py  pretrained_embeddings.py  sparse_embedding.py
models/recursive_reasoning/: hrm.py  trm.py  trm_hier6.py  trm_singlez.py
